--- a/capstone_project2/Decision Tree Feature_and_Modeling.ipynb
+++ b/capstone_project2/Decision Tree Feature_and_Modeling.ipynb
@@ -410,10 +410,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import GridSearchCV"
    ]
   },
@@ -421,13 +420,30 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 4s, sys: 1.22 s, total: 1min 5s\n",
+      "Wall time: 1min 6s\n"
+     ]
+    }
+   ],
    "source": [
-    "scaler = MinMaxScaler()\n",
-    "scaler.fit(X_train)\n",
-    "MinMaxScaler(copy=True, feature_range=(0,1))\n",
-    "X_train_scaled = scaler.transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)"
+    "%%time\n",
+    "\n",
+    "# Setup the hyperparameter grid\n",
+    "param_grid = {'min_samples_leaf': [1,5,10]}\n",
+    "\n",
+    "# instantiate model\n",
+    "dtr = DecisionTreeRegressor()\n",
+    "\n",
+    "# Instantiate the GridSearchCV object: gbrt_cv\n",
+    "dtr_cv = GridSearchCV(dtr, param_grid, cv=3)\n",
+    "\n",
+    "# Fit it to the data\n",
+    "dtr_cv.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -439,53 +455,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7h 11min 46s, sys: 52.7 s, total: 7h 12min 38s\n",
-      "Wall time: 7h 12min 52s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "# Setup the hyperparameter grid\n",
-    "param_grid = {'n_estimators': [100,500,1000],\n",
-    "             'max_depth': [4,6,8]}\n",
-    "\n",
-    "# instantiate model\n",
-    "rfr = RandomForestRegressor()\n",
-    "\n",
-    "# Instantiate the GridSearchCV object: gbrt_cv\n",
-    "rfr_cv = GridSearchCV(rfr, param_grid, cv=3)\n",
-    "\n",
-    "# Fit it to the data\n",
-    "rfr_cv.fit(X_train_scaled, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tuned parameters: {'max_depth': 8, 'n_estimators': 1000}\n",
-      "Best score is 0.9894646074832494\n",
-      "Best estimator is RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=8,\n",
-      "           max_features='auto', max_leaf_nodes=None,\n",
-      "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
-      "           min_samples_leaf=1, min_samples_split=2,\n",
-      "           min_weight_fraction_leaf=0.0, n_estimators=1000, n_jobs=1,\n",
-      "           oob_score=False, random_state=None, verbose=0, warm_start=False)\n"
+      "Tuned parameters: {'min_samples_leaf': 1}\n",
+      "Best score is 0.9956592670339364\n",
+      "Best estimator is DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+      "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+      "           min_impurity_split=None, min_samples_leaf=1,\n",
+      "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+      "           presort=False, random_state=None, splitter='best')\n"
      ]
     }
    ],
    "source": [
     "#Print the tuned parameters and score\n",
-    "print(\"Tuned parameters: {}\".format(rfr_cv.best_params_)) \n",
-    "print(\"Best score is {}\".format(rfr_cv.best_score_))\n",
-    "print(\"Best estimator is {}\".format(rfr_cv.best_estimator_))"
+    "print(\"Tuned parameters: {}\".format(dtr_cv.best_params_)) \n",
+    "print(\"Best score is {}\".format(dtr_cv.best_score_))\n",
+    "print(\"Best estimator is {}\".format(dtr_cv.best_estimator_))"
    ]
   },
   {
@@ -497,19 +481,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set sore: 0.99\n",
-      "Test set score: 0.99\n",
-      "CPU times: user 38min 16s, sys: 7.47 s, total: 38min 24s\n",
-      "Wall time: 38min 28s\n"
+      "Training set sore: 1.00\n",
+      "Test set score: 1.00\n",
+      "CPU times: user 9.74 s, sys: 400 ms, total: 10.1 s\n",
+      "Wall time: 10.3 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "rfr = RandomForestRegressor(max_depth=8,n_estimators=1000)\n",
-    "rfr.fit(X_train, y_train)\n",
-    "print(\"Training set sore: {:.2f}\".format(rfr.score(X_train, y_train)))\n",
-    "print(\"Test set score: {:.2f}\".format(rfr.score(X_test, y_test)))"
+    "dtr = DecisionTreeRegressor(min_samples_leaf=5)\n",
+    "dtr.fit(X_train, y_train)\n",
+    "print(\"Training set sore: {:.2f}\".format(dtr.score(X_train, y_train)))\n",
+    "print(\"Test set score: {:.2f}\".format(dtr.score(X_test, y_test)))"
    ]
   },
   {
