--- a/capstone_project2/Gradient Boosting Feature_and_Modeling.ipynb
+++ b/capstone_project2/Gradient Boosting Feature_and_Modeling.ipynb
@@ -411,6 +411,7 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import GridSearchCV"
    ]
@@ -419,13 +420,26 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(X_train)\n",
+    "MinMaxScaler(copy=True, feature_range=(0,1))\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6h 8min 27s, sys: 1min 47s, total: 6h 10min 15s\n",
-      "Wall time: 6h 12min 28s\n"
+      "CPU times: user 6h 42min 35s, sys: 1min 3s, total: 6h 43min 39s\n",
+      "Wall time: 6h 43min 51s\n"
      ]
     }
    ],
@@ -443,12 +457,12 @@
     "gbrt_cv = GridSearchCV(gbrt, param_grid, cv=3)\n",
     "\n",
     "# Fit it to the data\n",
-    "gbrt_cv.fit(X_train, y_train)"
+    "gbrt_cv.fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +470,7 @@
      "output_type": "stream",
      "text": [
       "Tuned parameters: {'learning_rate': 0.3, 'max_depth': 3, 'n_estimators': 1000}\n",
-      "Best score is 0.999110080594602\n",
+      "Best score is 0.9991887056792744\n",
       "Best estimator is GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
       "             learning_rate=0.3, loss='ls', max_depth=3, max_features=None,\n",
       "             max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
@@ -472,6 +486,30 @@
     "print(\"Tuned parameters: {}\".format(gbrt_cv.best_params_)) \n",
     "print(\"Best score is {}\".format(gbrt_cv.best_score_))\n",
     "print(\"Best estimator is {}\".format(gbrt_cv.best_estimator_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set sore: 1.00\n",
+      "Test set score: 1.00\n",
+      "CPU times: user 12min 17s, sys: 3.82 s, total: 12min 21s\n",
+      "Wall time: 12min 23s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "gbrt = GradientBoostingRegressor(learning_rate=0.3, max_depth=3, n_estimators=1000)\n",
+    "gbrt.fit(X_train, y_train)\n",
+    "print(\"Training set sore: {:.2f}\".format(gbrt.score(X_train, y_train)))\n",
+    "print(\"Test set score: {:.2f}\".format(gbrt.score(X_test, y_test)))"
    ]
   },
   {
