--- a/capstone_project2/Linear Regression Feature_and_Modeling .ipynb
+++ b/capstone_project2/Linear Regression Feature_and_Modeling .ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -29,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +284,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -417,16 +406,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -440,8 +436,8 @@
       "  3.70928231e+00 -1.27091356e+03 -1.80469557e+00  2.44326303e+00\n",
       "  3.13209681e+00  3.05033190e-01  1.60488229e-01]\n",
       "lr.intercept_: -21495.05850643999\n",
-      "CPU times: user 1.31 s, sys: 236 ms, total: 1.54 s\n",
-      "Wall time: 985 ms\n"
+      "CPU times: user 1.33 s, sys: 264 ms, total: 1.59 s\n",
+      "Wall time: 889 ms\n"
      ]
     }
    ],
@@ -457,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -466,8 +462,8 @@
      "text": [
       "Training set sore: 0.92\n",
       "Test set score: 0.91\n",
-      "CPU times: user 139 ms, sys: 43.3 ms, total: 183 ms\n",
-      "Wall time: 157 ms\n"
+      "CPU times: user 176 ms, sys: 73.9 ms, total: 250 ms\n",
+      "Wall time: 207 ms\n"
      ]
     }
    ],
@@ -480,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -489,8 +485,8 @@
      "text": [
       "Training set sore: 0.92\n",
       "Test set score: 0.91\n",
-      "CPU times: user 224 ms, sys: 77.4 ms, total: 301 ms\n",
-      "Wall time: 279 ms\n"
+      "CPU times: user 335 ms, sys: 138 ms, total: 474 ms\n",
+      "Wall time: 431 ms\n"
      ]
     }
    ],
@@ -506,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -516,8 +512,8 @@
       "Training set sore: 0.92\n",
       "Test set score: 0.91\n",
       "Number of features used: 20\n",
-      "CPU times: user 46.5 s, sys: 135 ms, total: 46.6 s\n",
-      "Wall time: 46.6 s\n"
+      "CPU times: user 1min 22s, sys: 312 ms, total: 1min 22s\n",
+      "Wall time: 1min 22s\n"
      ]
     },
     {
