--- a/capstone_project2/Gradient Boosting Feature_and_Modeling.ipynb
+++ b/capstone_project2/Gradient Boosting Feature_and_Modeling.ipynb
@@ -122,123 +122,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5263</td>\n",
-       "      <td>555</td>\n",
-       "      <td>1</td>\n",
+       "      <td>292</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5076</td>\n",
+       "      <td>672</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.229885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>292</td>\n",
        "      <td>4</td>\n",
-       "      <td>5020</td>\n",
-       "      <td>546</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4580</td>\n",
+       "      <td>662</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.229885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4782</td>\n",
-       "      <td>523</td>\n",
-       "      <td>1</td>\n",
+       "      <td>292</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4202</td>\n",
+       "      <td>560</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.229885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5011</td>\n",
-       "      <td>560</td>\n",
-       "      <td>1</td>\n",
+       "      <td>292</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2748</td>\n",
+       "      <td>340</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.229885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>292</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6102</td>\n",
-       "      <td>612</td>\n",
+       "      <td>9291</td>\n",
+       "      <td>1002</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.459770</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -247,25 +247,25 @@
       ],
       "text/plain": [
        "   Store  DayOfWeek  Sales  Customers  Open  Promo StateHoliday  \\\n",
-       "0      1          5   5263        555     1      1            0   \n",
-       "1      1          4   5020        546     1      1            0   \n",
-       "2      1          3   4782        523     1      1            0   \n",
-       "3      1          2   5011        560     1      1            0   \n",
-       "4      1          1   6102        612     1      1            0   \n",
+       "0    292          3   5076        672     1      0            0   \n",
+       "1    292          4   4580        662     1      0            0   \n",
+       "2    292          5   4202        560     1      0            0   \n",
+       "3    292          6   2748        340     1      0            0   \n",
+       "4    292          1   9291       1002     1      1            0   \n",
        "\n",
        "   SchoolHoliday  Year  Month        ...         Assortment  \\\n",
-       "0              1  2015      7        ...                  a   \n",
-       "1              1  2015      7        ...                  a   \n",
-       "2              1  2015      7        ...                  a   \n",
-       "3              1  2015      7        ...                  a   \n",
-       "4              1  2015      7        ...                  a   \n",
+       "0              1  2013      1        ...                  a   \n",
+       "1              1  2013      1        ...                  a   \n",
+       "2              1  2013      1        ...                  a   \n",
+       "3              0  2013      1        ...                  a   \n",
+       "4              0  2013      1        ...                  a   \n",
        "\n",
        "   CompetitionDistance  CompetitionOpenSinceMonth CompetitionOpenSinceYear  \\\n",
-       "0               1270.0                        9.0                   2008.0   \n",
-       "1               1270.0                        9.0                   2008.0   \n",
-       "2               1270.0                        9.0                   2008.0   \n",
-       "3               1270.0                        9.0                   2008.0   \n",
-       "4               1270.0                        9.0                   2008.0   \n",
+       "0               1100.0                        6.0                   2009.0   \n",
+       "1               1100.0                        6.0                   2009.0   \n",
+       "2               1100.0                        6.0                   2009.0   \n",
+       "3               1100.0                        6.0                   2009.0   \n",
+       "4               1100.0                        6.0                   2009.0   \n",
        "\n",
        "  Promo2  Promo2SinceWeek  Promo2SinceYear  PromoInterval  \\\n",
        "0      0              0.0              0.0              0   \n",
@@ -275,11 +275,11 @@
        "4      0              0.0              0.0              0   \n",
        "\n",
        "   CompetitionOpenByMonth  PromoOpenByMonth  \n",
-       "0                    82.0      24187.126437  \n",
-       "1                    82.0      24187.126437  \n",
-       "2                    82.0      24187.126437  \n",
-       "3                    82.0      24187.126437  \n",
-       "4                    82.0      24187.126437  \n",
+       "0                    43.0      24156.229885  \n",
+       "1                    43.0      24156.229885  \n",
+       "2                    43.0      24156.229885  \n",
+       "3                    43.0      24156.229885  \n",
+       "4                    43.0      24156.459770  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
@@ -363,7 +363,10 @@
    "source": [
     "X_columns = df_train_store.columns.values\n",
     "X_columns = X_columns.tolist()\n",
-    "X_columns.remove('Sales')"
+    "X_columns.remove('Sales')\n",
+    "X_columns.remove('PromoOpenByMonth')\n",
+    "X_columns.remove('SalePerCustomer')\n",
+    "X_columns.remove('Customers')"
    ]
   },
   {
@@ -418,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,15 +434,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6h 42min 35s, sys: 1min 3s, total: 6h 43min 39s\n",
-      "Wall time: 6h 43min 51s\n"
+      "CPU times: user 4h 58min 43s, sys: 1min 5s, total: 4h 59min 48s\n",
+      "Wall time: 5h 3s\n"
      ]
     }
    ],
@@ -462,21 +465,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned parameters: {'learning_rate': 0.3, 'max_depth': 3, 'n_estimators': 1000}\n",
-      "Best score is 0.9991887056792744\n",
+      "Tuned parameters: {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 10}\n",
+      "Best score is 0.10636006277580505\n",
       "Best estimator is GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
-      "             learning_rate=0.3, loss='ls', max_depth=3, max_features=None,\n",
+      "             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n",
       "             max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
       "             min_impurity_split=None, min_samples_leaf=1,\n",
       "             min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-      "             n_estimators=1000, presort='auto', random_state=None,\n",
+      "             n_estimators=10, presort='auto', random_state=None,\n",
       "             subsample=1.0, verbose=0, warm_start=False)\n"
      ]
     }
@@ -490,27 +493,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set sore: 1.00\n",
-      "Test set score: 1.00\n",
-      "CPU times: user 12min 17s, sys: 3.82 s, total: 12min 21s\n",
-      "Wall time: 12min 23s\n"
+      "Training set sore: 0.19\n",
+      "Test set score: 0.19\n",
+      "CPU times: user 6.25 s, sys: 96.2 ms, total: 6.35 s\n",
+      "Wall time: 6.35 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "gbrt = GradientBoostingRegressor(learning_rate=0.3, max_depth=3, n_estimators=1000)\n",
-    "gbrt.fit(X_train, y_train)\n",
-    "print(\"Training set sore: {:.2f}\".format(gbrt.score(X_train, y_train)))\n",
-    "print(\"Test set score: {:.2f}\".format(gbrt.score(X_test, y_test)))"
+    "gbrt = GradientBoostingRegressor(learning_rate=0.1, max_depth=3, n_estimators=10)\n",
+    "gbrt.fit(X_train_scaled, y_train)\n",
+    "print(\"Training set sore: {:.2f}\".format(gbrt.score(X_train_scaled, y_train)))\n",
+    "print(\"Test set score: {:.2f}\".format(gbrt.score(X_test_scaled, y_test)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
