--- a/capstone_project2/Decision Tree Feature_and_Modeling.ipynb
+++ b/capstone_project2/Decision Tree Feature_and_Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,123 +122,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5263</td>\n",
-       "      <td>555</td>\n",
-       "      <td>1</td>\n",
+       "      <td>292</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5076</td>\n",
+       "      <td>672</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.229885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>292</td>\n",
        "      <td>4</td>\n",
-       "      <td>5020</td>\n",
-       "      <td>546</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4580</td>\n",
+       "      <td>662</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.229885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4782</td>\n",
-       "      <td>523</td>\n",
-       "      <td>1</td>\n",
+       "      <td>292</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4202</td>\n",
+       "      <td>560</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.229885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5011</td>\n",
-       "      <td>560</td>\n",
-       "      <td>1</td>\n",
+       "      <td>292</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2748</td>\n",
+       "      <td>340</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.229885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>292</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6102</td>\n",
-       "      <td>612</td>\n",
+       "      <td>9291</td>\n",
+       "      <td>1002</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
        "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
        "      <td>...</td>\n",
        "      <td>a</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>24187.126437</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>24156.459770</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -247,25 +247,25 @@
       ],
       "text/plain": [
        "   Store  DayOfWeek  Sales  Customers  Open  Promo StateHoliday  \\\n",
-       "0      1          5   5263        555     1      1            0   \n",
-       "1      1          4   5020        546     1      1            0   \n",
-       "2      1          3   4782        523     1      1            0   \n",
-       "3      1          2   5011        560     1      1            0   \n",
-       "4      1          1   6102        612     1      1            0   \n",
+       "0    292          3   5076        672     1      0            0   \n",
+       "1    292          4   4580        662     1      0            0   \n",
+       "2    292          5   4202        560     1      0            0   \n",
+       "3    292          6   2748        340     1      0            0   \n",
+       "4    292          1   9291       1002     1      1            0   \n",
        "\n",
        "   SchoolHoliday  Year  Month        ...         Assortment  \\\n",
-       "0              1  2015      7        ...                  a   \n",
-       "1              1  2015      7        ...                  a   \n",
-       "2              1  2015      7        ...                  a   \n",
-       "3              1  2015      7        ...                  a   \n",
-       "4              1  2015      7        ...                  a   \n",
+       "0              1  2013      1        ...                  a   \n",
+       "1              1  2013      1        ...                  a   \n",
+       "2              1  2013      1        ...                  a   \n",
+       "3              0  2013      1        ...                  a   \n",
+       "4              0  2013      1        ...                  a   \n",
        "\n",
        "   CompetitionDistance  CompetitionOpenSinceMonth CompetitionOpenSinceYear  \\\n",
-       "0               1270.0                        9.0                   2008.0   \n",
-       "1               1270.0                        9.0                   2008.0   \n",
-       "2               1270.0                        9.0                   2008.0   \n",
-       "3               1270.0                        9.0                   2008.0   \n",
-       "4               1270.0                        9.0                   2008.0   \n",
+       "0               1100.0                        6.0                   2009.0   \n",
+       "1               1100.0                        6.0                   2009.0   \n",
+       "2               1100.0                        6.0                   2009.0   \n",
+       "3               1100.0                        6.0                   2009.0   \n",
+       "4               1100.0                        6.0                   2009.0   \n",
        "\n",
        "  Promo2  Promo2SinceWeek  Promo2SinceYear  PromoInterval  \\\n",
        "0      0              0.0              0.0              0   \n",
@@ -275,11 +275,11 @@
        "4      0              0.0              0.0              0   \n",
        "\n",
        "   CompetitionOpenByMonth  PromoOpenByMonth  \n",
-       "0                    82.0      24187.126437  \n",
-       "1                    82.0      24187.126437  \n",
-       "2                    82.0      24187.126437  \n",
-       "3                    82.0      24187.126437  \n",
-       "4                    82.0      24187.126437  \n",
+       "0                    43.0      24156.229885  \n",
+       "1                    43.0      24156.229885  \n",
+       "2                    43.0      24156.229885  \n",
+       "3                    43.0      24156.229885  \n",
+       "4                    43.0      24156.459770  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
@@ -332,7 +332,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import TimeSeriesSplit"
    ]
@@ -363,7 +372,10 @@
    "source": [
     "X_columns = df_train_store.columns.values\n",
     "X_columns = X_columns.tolist()\n",
-    "X_columns.remove('Sales')"
+    "X_columns.remove('Sales')\n",
+    "X_columns.remove('PromoOpenByMonth')\n",
+    "X_columns.remove('SalePerCustomer')\n",
+    "X_columns.remove('Customers')"
    ]
   },
   {
@@ -408,9 +420,19 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import GridSearchCV"
@@ -420,13 +442,26 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(X_train)\n",
+    "MinMaxScaler(copy=True, feature_range=(0,1))\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 4s, sys: 1.22 s, total: 1min 5s\n",
-      "Wall time: 1min 6s\n"
+      "CPU times: user 46.5 s, sys: 1.77 s, total: 48.2 s\n",
+      "Wall time: 48.4 s\n"
      ]
     }
    ],
@@ -443,23 +478,23 @@
     "dtr_cv = GridSearchCV(dtr, param_grid, cv=3)\n",
     "\n",
     "# Fit it to the data\n",
-    "dtr_cv.fit(X_train, y_train)\n"
+    "dtr_cv.fit(X_train_scaled, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned parameters: {'min_samples_leaf': 1}\n",
-      "Best score is 0.9956592670339364\n",
+      "Tuned parameters: {'min_samples_leaf': 5}\n",
+      "Best score is -2.07034459195019\n",
       "Best estimator is DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
-      "           min_impurity_split=None, min_samples_leaf=1,\n",
+      "           min_impurity_split=None, min_samples_leaf=5,\n",
       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
       "           presort=False, random_state=None, splitter='best')\n"
      ]
@@ -474,27 +509,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set sore: 1.00\n",
-      "Test set score: 1.00\n",
-      "CPU times: user 9.74 s, sys: 400 ms, total: 10.1 s\n",
-      "Wall time: 10.3 s\n"
+      "Training set sore: 0.95\n",
+      "Test set score: -0.33\n",
+      "CPU times: user 5.68 s, sys: 120 ms, total: 5.8 s\n",
+      "Wall time: 5.82 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "dtr = DecisionTreeRegressor(min_samples_leaf=5)\n",
-    "dtr.fit(X_train, y_train)\n",
-    "print(\"Training set sore: {:.2f}\".format(dtr.score(X_train, y_train)))\n",
-    "print(\"Test set score: {:.2f}\".format(dtr.score(X_test, y_test)))"
+    "dtr.fit(X_train_scaled, y_train)\n",
+    "print(\"Training set sore: {:.2f}\".format(dtr.score(X_train_scaled, y_train)))\n",
+    "print(\"Test set score: {:.2f}\".format(dtr.score(X_test_scaled, y_test)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5546., 1621., 6885., ..., 4790., 5032., 5265.])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
